# GamifiedTodo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GamifiedTodo/: CMakeLists.txt  EventCategory.cpp  EventCategory.h  Habit.cpp  Habit.h  PointCalculator.h  ScheduleTime.cpp  ScheduleTime.h  Task.cpp  Task.h  TimeBlockCategory.cpp  TimeBlockCategory.h
src/model/: EventCategory.h  PointCalculator.cpp  ScheduleTime.h  Task.cpp
src/ui/: CMakeLists.txt  main.cpp
